--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,17 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "illuminate/contracts": "^5.5|^6.0|^7.0",
-        "illuminate/support": "^5.5|^6.0|^7.0",
-        "graham-campbell/manager": "^3.0|^4.0",
-        "pusher/pusher-php-server": "^3.3|^4.0"
+        "php": ">=7.0",
+        "illuminate/contracts": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "graham-campbell/manager": "^3.0|^4.0|^5.0",
+        "pusher/pusher-php-server": "^3.3|^4.0|^5.0|^7.0"
     },
     "require-dev": {
-        "graham-campbell/analyzer": "^2.4",
-        "graham-campbell/testbench": "^4.0|^5.0",
+        "graham-campbell/analyzer": "^2.4|^4.0",
+        "graham-campbell/testbench": "^4.0|^5.0|^6.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.5|^7.0|^8.0"
+        "phpunit/phpunit": "^6.5|^7.0|^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
